--- a/src/components/hour/hour.scss
+++ b/src/components/hour/hour.scss
@@ -1,7 +1,7 @@
 .calendar {
-  display: flex;
-  flex-direction: column;
-  height: calc(100vh - 60px);
+  // display: flex;
+  // flex-direction: column;
+  // height: calc(100vh - 60px);
 
   &__time-slot {
     height: 59px;
