--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -54,8 +54,15 @@
     border: none;
     color: #fff;
     background-color: cornflowerblue;
-    border: none;
     padding: 8px 16px;
     border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+
+    &:disabled {
+      background-color: lightgray;
+      color: #aaa;
+      cursor: not-allowed;
+    }
   }
 }
