--- a/src/components/eventModalWindow/eventModalWindow.scss
+++ b/src/components/eventModalWindow/eventModalWindow.scss
@@ -1,8 +1,7 @@
 .event-modal {
   position: absolute;
-  top: 55px;
-  left: 85px;
   width: 150px;
   height: 40px;
   background-color: aqua;
+  z-index: 100;
 }
