--- a/src/components/event/event.scss
+++ b/src/components/event/event.scss
@@ -1,7 +1,8 @@
 .event {
   position: absolute;
-  width: 80%;
-  background-color: cornflowerblue;
+  width: 100%;
+  margin-left: 3px;
+  background-color: #6495ed;
   z-index: 1;
   border-radius: 8px;
   padding: 8px;
@@ -17,7 +18,10 @@
 
   &:hover {
     font-weight: bold;
-    background-color: red;
+    border: 2px solid #072a6b;
+    background-color: #1a5cd6;
+    transform: scaleX(1.2) scaleY(1.2);
+    z-index: 2;
   }
 }
 
