--- a/src/components/eventModalWindow/eventModalWindow.scss
+++ b/src/components/eventModalWindow/eventModalWindow.scss
@@ -1,7 +1,29 @@
 .event-modal {
   position: absolute;
   width: 150px;
-  height: 40px;
-  background-color: aqua;
-  z-index: 100;
+  height: 100px;
+  border: 1px solid #000;
+  border-radius: 5px;
+  background-color: #6495ed;
+  z-index: 11;
+}
+
+.event-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #cccccc45;
+  z-index: 10;
+}
+
+.delete-button {
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all 0.3s linear;
+
+  &:hover {
+    background-color: #ff0000;
+  }
 }
