--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,16 +1,13 @@
 .calendar {
-  display: flex;
-  flex-direction: column;
-  height: calc(100vh - 60px);
-
   &__time-scale {
     height: 100%;
     width: 48px;
+    margin-right: 10px;
   }
 }
 
 .time-slot {
-  height: 60px;
+  height: 69px;
   width: 48px;
   text-align: right;
 
