--- a/src/components/hour/hour.scss
+++ b/src/components/hour/hour.scss
@@ -2,7 +2,7 @@
   &__time-slot {
     position: relative;
     height: 59px;
-    margin: 0 10px 10px 0;
+    margin: 2px 5px;
     border-bottom: 1px solid #000000;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
     cursor: pointer;
