--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,21 +1,19 @@
 .calendar {
   &__time-scale {
-    height: 100%;
-    width: 48px;
     margin-right: 10px;
   }
 }
 
 .time-slot {
-  height: 69px;
+  height: 61px;
   width: 48px;
-  text-align: right;
+  padding-top: 4px;
+  text-align: center;
+  border-top: 1px solid black;
 
   &__time {
-    // position: relative;
     font-size: 12px;
     opacity: 0.7;
-    top: -12px;
-    margin-right: 4px;
+    // margin-right: 4px;
   }
 }
