--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,14 @@
-* {
+// * {
+//   box-sizing: border-box;
+// }
+
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  overflow: hidden;
 }
