--- a/src/components/event/event.scss
+++ b/src/components/event/event.scss
@@ -3,7 +3,7 @@
   width: 100%;
   background-color: #6495ed;
   z-index: 1;
-  padding: 2px 0 0 10px;
+  padding: 2px 0 2px 10px;
   color: #f0f4ff;
   overflow: hidden;
   cursor: pointer;
@@ -11,9 +11,9 @@
 
   &__title {
     width: 100%;
-    overflow: hidden;
     font-size: 12px;
     font-weight: bold;
+    overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
     margin-bottom: 2px;
@@ -22,24 +22,30 @@
   &__time {
     font-size: 10px;
     color: #333;
+    overflow: hidden;
   }
 
   &__description {
-    width: 100%;
-    margin-top: 4px;
+    margin-top: 2px;
+    padding: 4px;
     font-size: 12px;
     color: #333;
     overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
   }
 
   &:hover {
     font-weight: bold;
     border: 2px solid #072a6b;
     background-color: #1a5cd6;
-    z-index: 2;
     transform: scaleX(1.2) scaleY(1.2);
+    overflow: visible;
+    z-index: 3;
+
+    .event__description {
+      display: block;
+      width: 100%;
+      background-color: #6495ed;
+    }
   }
 }
 
