--- a/src/components/event/event.scss
+++ b/src/components/event/event.scss
@@ -1,13 +1,12 @@
 .event {
   position: absolute;
   width: 100%;
-  background-color: #6495ed;
+  background-color: #5a9bd8;
   z-index: 1;
   padding: 2px 0 2px 10px;
-  color: #f0f4ff;
+  color: #ffffff;
   overflow: hidden;
   cursor: pointer;
-  transition: all 0.2s ease-in-out;
 
   &__title {
     width: 100%;
@@ -21,7 +20,7 @@
 
   &__time {
     font-size: 10px;
-    color: #333;
+    color: #444444;
     overflow: hidden;
   }
 
@@ -29,27 +28,27 @@
     margin-top: 2px;
     padding: 4px;
     font-size: 12px;
-    color: #333;
+    color: #333333;
+    border: 1px solid #dddddd;
     overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    word-wrap: normal;
   }
 
   &:hover {
     font-weight: bold;
-    border: 2px solid #072a6b;
-    background-color: #1a5cd6;
-    transform: scaleX(1.2) scaleY(1.2);
+    border: 2px solid #34495e;
+    background-color: #28b485;
     overflow: visible;
     z-index: 3;
 
     .event__description {
       display: block;
-      width: 100%;
-      background-color: #6495ed;
+      width: 200%;
+      background-color: #1b263b;
+      color: #ecf0f1;
+      white-space: normal;
     }
   }
-}
-
-.delete-event-btn {
-  cursor: pointer;
-  border: none;
 }
