--- a/src/components/eventModalWindow/eventModalWindow.scss
+++ b/src/components/eventModalWindow/eventModalWindow.scss
@@ -1,5 +1,7 @@
 .event-modal {
   position: absolute;
+  top: 20px;
+  left: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
